feat: implement BB LiveView dashboard with 3D robot visualisation
Complete implementation of the LiveView dashboard library for Beam Bots
robots. Provides a self-contained dashboard that can be mounted into any
Phoenix application with a single router macro.

Core features:
- Router macro `bb_dashboard/2` for easy integration
- Safety widget with arm/disarm controls and state display
- Joint control with real-time sliders for all movable joints
- 3D visualisation using Three.js with live position updates
- Event stream monitor with filtering and pause/resume
- Command execution panel with dynamic form generation
- Parameter editor with type-specific controls

Technical implementation:
- LiveView components with PubSub subscriptions for real-time updates
- Bundled CSS/JS assets served via custom static plug
- Three.js scene builder supporting box, cylinder, sphere geometries
- Forward kinematics visualisation with proper joint transforms
- Direct notification path for responsive slider-to-visualisation updates
- Comprehensive test infrastructure with phoenix_test

Dev server:
- Local development server with hot reload
- Test robot based on WidowX-200 topology for UI testing

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 bb_liveview-*.tar
 
+# Dialyzer PLT files
+priv/plts/
+
+# Node.js dependencies
+/assets/node_modules/
+
