--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,15 +15,52 @@ permissions:
   contents: read
 
 jobs:
+  build-assets:
+    name: Build assets
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: team-alembic/staple-actions/actions/install-elixir@main
+      - name: Fetch Elixir deps (needed for JS packages)
+        run: mix deps.get
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: assets/package-lock.json
+      - name: Install npm dependencies
+        working-directory: assets
+        run: npm ci
+      - name: Build assets
+        working-directory: assets
+        run: npm run build:all
+      - name: Verify assets are fresh
+        run: |
+          if git diff --exit-code priv/static/; then
+            echo "Assets are up to date"
+          else
+            echo "ERROR: Assets are out of date. Run 'mix assets.build' and commit the changes."
+            exit 1
+          fi
+      - uses: actions/upload-artifact@v4
+        with:
+          name: built-assets
+          path: priv/static/
+
   build-test:
     name: MIX_ENV=test mix compile
     runs-on: ubuntu-latest
+    needs: build-assets
     steps:
-      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-      - uses: team-alembic/staple-actions/actions/install-elixir@59199173e18eee6748b65d01626ef82d51c6e963 # main
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: built-assets
+          path: priv/static/
+      - uses: team-alembic/staple-actions/actions/install-elixir@main
       - name: Set OS deps compile partition count
         run: echo "MIX_OS_DEPS_COMPILE_PARTITION_COUNT=$(($(lscpu -p | grep -v '^#' | sort -u -t, -k 2,4 | wc -l) / 2))" >> $GITHUB_ENV
-      - uses: team-alembic/staple-actions/actions/mix-compile@04f27881d51ef973841fc40c549aefb7b52db7f7 # main
+      - uses: team-alembic/staple-actions/actions/mix-compile@main
         with:
           mix-env: test
           args: "--warnings-as-errors"
@@ -33,8 +70,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-test
     steps:
-      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-      - uses: team-alembic/staple-actions/actions/mix-test@59199173e18eee6748b65d01626ef82d51c6e963 # main
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: built-assets
+          path: priv/static/
+      - uses: team-alembic/staple-actions/actions/mix-test@main
         with:
           mix-env: test
 
@@ -45,16 +86,20 @@ jobs:
     permissions:
       security-events: write
     steps:
-      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-      - uses: team-alembic/staple-actions/actions/mix-credo@59199173e18eee6748b65d01626ef82d51c6e963 # main
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: built-assets
+          path: priv/static/
+      - uses: team-alembic/staple-actions/actions/mix-credo@main
         with:
           mix-env: test
       - name: Run Credo SAST
-        uses: team-alembic/staple-actions/actions/mix-task@59199173e18eee6748b65d01626ef82d51c6e963 # main
+        uses: team-alembic/staple-actions/actions/mix-task@main
         with:
           task: credo --format sarif > results.sarif
       - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@1b168cd39490f61582a9beae412bb7057a6b2c4e # v4.31.8
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: results.sarif
           category: credo
@@ -64,8 +109,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-test
     steps:
-      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-      - uses: team-alembic/staple-actions/actions/mix-format@59199173e18eee6748b65d01626ef82d51c6e963 # main
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: built-assets
+          path: priv/static/
+      - uses: team-alembic/staple-actions/actions/mix-format@main
         with:
           mix-env: test
 
@@ -74,8 +123,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-test
     steps:
-      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-      - uses: team-alembic/staple-actions/actions/mix-dialyzer@59199173e18eee6748b65d01626ef82d51c6e963 # main
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: built-assets
+          path: priv/static/
+      - uses: team-alembic/staple-actions/actions/mix-dialyzer@main
         with:
           mix-env: dev
 
@@ -83,9 +136,9 @@ jobs:
     name: mix deps.audit + hex.audit
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-      - uses: team-alembic/staple-actions/actions/mix-hex-audit@59199173e18eee6748b65d01626ef82d51c6e963 # main
-      - uses: team-alembic/staple-actions/actions/mix-task@59199173e18eee6748b65d01626ef82d51c6e963 # main
+      - uses: actions/checkout@v4
+      - uses: team-alembic/staple-actions/actions/mix-hex-audit@main
+      - uses: team-alembic/staple-actions/actions/mix-task@main
         with:
           task: deps.audit
 
@@ -94,8 +147,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-test
     steps:
-      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-      - uses: team-alembic/staple-actions/actions/mix-task@59199173e18eee6748b65d01626ef82d51c6e963 # main
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: built-assets
+          path: priv/static/
+      - uses: team-alembic/staple-actions/actions/mix-task@main
         with:
           mix-env: test
           task: deps.unlock --check-unused
@@ -104,22 +161,46 @@ jobs:
     name: REUSE compliance
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+      - uses: actions/checkout@v4
       - name: REUSE compliance check
-        uses: fsfe/reuse-action@v6
+        uses: fsfe/reuse-action@v5
+
+  npm-test:
+    name: npm test
+    runs-on: ubuntu-latest
+    needs: build-assets
+    steps:
+      - uses: actions/checkout@v4
+      - uses: team-alembic/staple-actions/actions/install-elixir@main
+      - name: Fetch Elixir deps (needed for JS packages)
+        run: mix deps.get
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: assets/package-lock.json
+      - name: Install npm dependencies
+        working-directory: assets
+        run: npm ci
+      - name: Run npm tests
+        working-directory: assets
+        run: npm test
 
   build-docs:
     name: mix docs
     runs-on: ubuntu-latest
-    needs:
-      - build-test
+    needs: build-test
     steps:
-      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-      - uses: team-alembic/staple-actions/actions/mix-docs@59199173e18eee6748b65d01626ef82d51c6e963 # main
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: built-assets
+          path: priv/static/
+      - uses: team-alembic/staple-actions/actions/mix-docs@main
         with:
           mix-env: dev
           use-cache: false
-      - uses: actions/upload-pages-artifact@7b1f4a764d45c48632c6b24a0339c27f5614fb0b # v4.0.0
+      - uses: actions/upload-pages-artifact@v3
         with:
           path: doc/
 
@@ -137,7 +218,7 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@d6db90164ac5ed86f2b6aed7e0febac5b3c0c03e # v4.0.5
+        uses: actions/deploy-pages@v4
 
   release:
     name: Publish to Hex.pm
@@ -150,11 +231,28 @@ jobs:
       - audit
       - unused-deps
       - reuse
+      - npm-test
     if: startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+      - uses: actions/checkout@v4
+      - uses: team-alembic/staple-actions/actions/install-elixir@main
+      - name: Fetch Elixir deps (needed for JS packages)
+        run: mix deps.get
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: assets/package-lock.json
+      - name: Install npm dependencies
+        working-directory: assets
+        run: npm ci
+      - name: Build minified assets for release
+        working-directory: assets
+        run: |
+          npm run build -- --minify
+          npm run build:css
       - name: Extract release notes from CHANGELOG.md
         id: extract-notes
         run: |
@@ -226,7 +324,7 @@ jobs:
             --title ${GITHUB_REF#refs/tags/} \
             --generate-notes \
             ${GITHUB_REF#refs/tags/}
-      - uses: team-alembic/staple-actions/actions/mix-hex-publish@59199173e18eee6748b65d01626ef82d51c6e963 # main
+      - uses: team-alembic/staple-actions/actions/mix-hex-publish@main
         with:
           mix-env: dev
           hex-api-key: ${{ secrets.HEX_API_KEY }}
