--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: 2025 James Harton
+# SPDX-FileCopyrightText: 2026 James Harton
 #
 # SPDX-License-Identifier: Apache-2.0
 
@@ -12,319 +12,16 @@ on:
     branches: [main]
 
 permissions:
-  contents: read
+  contents: write
+  security-events: write
+  pages: write
+  id-token: write
 
 jobs:
-  build-assets:
-    name: Build assets
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v6
-      - uses: team-alembic/staple-actions/actions/install-elixir@main
-      - name: Fetch Elixir deps (needed for JS packages)
-        run: mix deps.get
-      - uses: actions/setup-node@v6
-        with:
-          node-version: "20"
-          cache: "npm"
-          cache-dependency-path: assets/package-lock.json
-      - name: Install npm dependencies
-        working-directory: assets
-        run: npm ci
-      - name: Build assets
-        working-directory: assets
-        run: npm run build:all
-      - name: Verify assets are fresh
-        run: |
-          if git diff --exit-code priv/static/; then
-            echo "Assets are up to date"
-          else
-            echo "ERROR: Assets are out of date. Run 'mix assets.build' and commit the changes."
-            exit 1
-          fi
-      - uses: actions/upload-artifact@v6
-        with:
-          name: built-assets
-          path: priv/static/
-
-  build-test:
-    name: MIX_ENV=test mix compile
-    runs-on: ubuntu-latest
-    needs: build-assets
-    steps:
-      - uses: actions/checkout@v6
-      - uses: actions/download-artifact@v7
-        with:
-          name: built-assets
-          path: priv/static/
-      - uses: team-alembic/staple-actions/actions/install-elixir@main
-      - name: Set OS deps compile partition count
-        run: echo "MIX_OS_DEPS_COMPILE_PARTITION_COUNT=$(($(lscpu -p | grep -v '^#' | sort -u -t, -k 2,4 | wc -l) / 2))" >> $GITHUB_ENV
-      - uses: team-alembic/staple-actions/actions/mix-compile@main
-        with:
-          mix-env: test
-          args: "--warnings-as-errors"
-
-  test:
-    name: mix test
-    runs-on: ubuntu-latest
-    needs: build-test
-    steps:
-      - uses: actions/checkout@v6
-      - uses: actions/download-artifact@v7
-        with:
-          name: built-assets
-          path: priv/static/
-      - uses: team-alembic/staple-actions/actions/mix-test@main
-        with:
-          mix-env: test
-
-  credo:
-    name: mix credo --strict
-    runs-on: ubuntu-latest
-    needs: build-test
-    permissions:
-      security-events: write
-    steps:
-      - uses: actions/checkout@v6
-      - uses: actions/download-artifact@v7
-        with:
-          name: built-assets
-          path: priv/static/
-      - uses: team-alembic/staple-actions/actions/mix-credo@main
-        with:
-          mix-env: test
-      - name: Run Credo SAST
-        uses: team-alembic/staple-actions/actions/mix-task@main
-        with:
-          task: credo --format sarif > results.sarif
-      - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v4
-        with:
-          sarif_file: results.sarif
-          category: credo
-
-  formatter:
-    name: mix format --check-formatted
-    runs-on: ubuntu-latest
-    needs: build-test
-    steps:
-      - uses: actions/checkout@v6
-      - uses: actions/download-artifact@v7
-        with:
-          name: built-assets
-          path: priv/static/
-      - uses: team-alembic/staple-actions/actions/mix-format@main
-        with:
-          mix-env: test
-
-  dialyzer:
-    name: mix dialyzer
-    runs-on: ubuntu-latest
-    needs: build-test
-    steps:
-      - uses: actions/checkout@v6
-      - uses: actions/download-artifact@v7
-        with:
-          name: built-assets
-          path: priv/static/
-      - uses: team-alembic/staple-actions/actions/mix-dialyzer@main
-        with:
-          mix-env: dev
-
-  audit:
-    name: mix deps.audit + hex.audit
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v6
-      - uses: team-alembic/staple-actions/actions/mix-hex-audit@main
-      - uses: team-alembic/staple-actions/actions/mix-task@main
-        with:
-          task: deps.audit
-
-  unused-deps:
-    name: mix deps.unlock --check-unused
-    runs-on: ubuntu-latest
-    needs: build-test
-    steps:
-      - uses: actions/checkout@v6
-      - uses: actions/download-artifact@v7
-        with:
-          name: built-assets
-          path: priv/static/
-      - uses: team-alembic/staple-actions/actions/mix-task@main
-        with:
-          mix-env: test
-          task: deps.unlock --check-unused
-
-  reuse:
-    name: REUSE compliance
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v6
-      - name: REUSE compliance check
-        uses: fsfe/reuse-action@v6
-
-  npm-test:
-    name: npm test
-    runs-on: ubuntu-latest
-    needs: build-assets
-    steps:
-      - uses: actions/checkout@v6
-      - uses: team-alembic/staple-actions/actions/install-elixir@main
-      - name: Fetch Elixir deps (needed for JS packages)
-        run: mix deps.get
-      - uses: actions/setup-node@v6
-        with:
-          node-version: "20"
-          cache: "npm"
-          cache-dependency-path: assets/package-lock.json
-      - name: Install npm dependencies
-        working-directory: assets
-        run: npm ci
-      - name: Run npm tests
-        working-directory: assets
-        run: npm test
-
-  build-docs:
-    name: mix docs
-    runs-on: ubuntu-latest
-    needs: build-test
-    steps:
-      - uses: actions/checkout@v6
-      - uses: actions/download-artifact@v7
-        with:
-          name: built-assets
-          path: priv/static/
-      - uses: team-alembic/staple-actions/actions/mix-docs@main
-        with:
-          mix-env: dev
-          use-cache: false
-      - uses: actions/upload-pages-artifact@v4
-        with:
-          path: doc/
-
-  deploy-docs:
-    name: Deploy docs to GitHub Pages
-    runs-on: ubuntu-latest
-    needs: build-docs
-    if: github.ref == 'refs/heads/main'
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
-
-  release:
-    name: Publish to Hex.pm
-    runs-on: ubuntu-latest
-    needs:
-      - test
-      - dialyzer
-      - credo
-      - formatter
-      - audit
-      - unused-deps
-      - reuse
-      - npm-test
-    if: startsWith(github.ref, 'refs/tags/v')
-    permissions:
-      contents: write
-    steps:
-      - uses: actions/checkout@v6
-      - uses: team-alembic/staple-actions/actions/install-elixir@main
-      - name: Fetch Elixir deps (needed for JS packages)
-        run: mix deps.get
-      - uses: actions/setup-node@v6
-        with:
-          node-version: "20"
-          cache: "npm"
-          cache-dependency-path: assets/package-lock.json
-      - name: Install npm dependencies
-        working-directory: assets
-        run: npm ci
-      - name: Build minified assets for release
-        working-directory: assets
-        run: |
-          npm run build -- --minify
-          npm run build:css
-      - name: Extract release notes from CHANGELOG.md
-        id: extract-notes
-        run: |
-          TAG_NAME=${GITHUB_REF#refs/tags/}
-          VERSION=${TAG_NAME#v}
-
-          # Extract the section for this version from CHANGELOG.md
-          awk -v version="$VERSION" '
-            /^## \[v?[0-9]/ {
-              if (found) exit
-              if (index($0, "[v" version "]") || index($0, "[" version "]")) {
-                found = 1
-                next
-              }
-            }
-            found {
-              if (/^## \[v?[0-9]/) exit
-              print
-            }
-          ' CHANGELOG.md > release_notes.md
-
-          # Check if notes were found
-          if [ -s release_notes.md ]; then
-            echo "has_notes=true" >> $GITHUB_OUTPUT
-            echo "Release notes extracted for version $VERSION"
-          else
-            echo "has_notes=false" >> $GITHUB_OUTPUT
-            echo "No release notes found for version $VERSION, will use auto-generated notes"
-          fi
-      - name: Create prerelease with changelog notes
-        if: ${{ (contains(github.ref, '-rc') || contains(github.ref, '-beta') || contains(github.ref, '-alpha') || contains(github.ref, '-pre')) && steps.extract-notes.outputs.has_notes == 'true' }}
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        run: |
-          gh release create \
-            --repo ${{ github.repository }} \
-            --title ${GITHUB_REF#refs/tags/} \
-            --prerelease \
-            --notes-file release_notes.md \
-            ${GITHUB_REF#refs/tags/}
-      - name: Create prerelease with generated notes
-        if: ${{ (contains(github.ref, '-rc') || contains(github.ref, '-beta') || contains(github.ref, '-alpha') || contains(github.ref, '-pre')) && steps.extract-notes.outputs.has_notes != 'true' }}
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        run: |
-          gh release create \
-            --repo ${{ github.repository }} \
-            --title ${GITHUB_REF#refs/tags/} \
-            --prerelease \
-            --generate-notes \
-            ${GITHUB_REF#refs/tags/}
-      - name: Create release with changelog notes
-        if: ${{ (!contains(github.ref, '-rc') && !contains(github.ref, '-beta') && !contains(github.ref, '-alpha') && !contains(github.ref, '-pre')) && steps.extract-notes.outputs.has_notes == 'true' }}
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        run: |
-          gh release create \
-            --repo ${{ github.repository }} \
-            --title ${GITHUB_REF#refs/tags/} \
-            --notes-file release_notes.md \
-            ${GITHUB_REF#refs/tags/}
-      - name: Create release with generated notes
-        if: ${{ (!contains(github.ref, '-rc') && !contains(github.ref, '-beta') && !contains(github.ref, '-alpha') && !contains(github.ref, '-pre')) && steps.extract-notes.outputs.has_notes != 'true' }}
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        run: |
-          gh release create \
-            --repo ${{ github.repository }} \
-            --title ${GITHUB_REF#refs/tags/} \
-            --generate-notes \
-            ${GITHUB_REF#refs/tags/}
-      - uses: team-alembic/staple-actions/actions/mix-hex-publish@main
-        with:
-          mix-env: dev
-          hex-api-key: ${{ secrets.HEX_API_KEY }}
+  CI:
+    uses: beam-bots/.github/.github/workflows/elixir-ci.yml@61ed48adfb0acec3baa9a32114d377546ee70478 # main
+    with:
+      enable-docs-deploy: true
+      enable-release: true
+    secrets:
+      HEX_API_KEY: ${{ secrets.HEX_API_KEY }}
